# bbtape2

./: CMakeLists.txt  README.md  main.cpp  tape.dst.json  tape.src.json  ыфвфыв
bbtape/: CMakeLists.txt  config.cpp  file_handler.cpp  ram_handler.cpp  sort.cpp  utils.cpp
bbtape/include/bbtape/: config.hpp  file_handler.hpp  ram_handler.hpp  sort.hpp  sort_impl.hpp  tape_handler.hpp  unit.hpp  utils.hpp
tests/: CMakeLists.txt  balance_ram_test.cpp  ram_handler_test.cpp  tape_handler_test.cpp
